--- a/templates/analyses/cases/show.html
+++ b/templates/analyses/cases/show.html
@@ -22,7 +22,7 @@
 
     <div class="content">
         <div class="page-h1">
-            <h1>Case: <small>
+            <h1>Case <small>
                 {% if case.name|length > 70 %}
                     {{ case.name|slice:":70" }} ...
                 {% else %}
