Changed the icons in dashboard page

--- a/templates/users/dashboard.html
+++ b/templates/users/dashboard.html
@@ -57,9 +57,9 @@
                                         </td>
                                         <td>{{ case.created_at }}</td>
                                         <td>
-                                            <a href="{% url "analyses.views.show_case" case.id "thumb" %}" type="button" class="btn btn-primary btn-xs" data-tooltip="tooltip" title="View case thumbnails"><i class="fa fa-camera"></i></a>
-                                            <a href="{% url "analyses.views.show_case" case.id "list" %}" type="button" class="btn btn-info btn-xs" data-tooltip="tooltip" title="View case"><i class="fa fa-book"></i></a>
-                                            <a href="{% url "analyses.views.edit_case" case.id %}" type="button" class="btn btn-soft btn-xs" data-tooltip="tooltip" title="Edit case"><i class="fa fa-pencil"></i></a>
+                                            <a href="{% url "analyses.views.show_case" case.id "thumb" %}" type="button" class="btn btn-primary btn-xs" data-tooltip="tooltip" title="View case thumbnails"><span class="glyphicon glyphicon-camera"></span></a>
+                                            <a href="{% url "analyses.views.show_case" case.id "list" %}" type="button" class="btn btn-info btn-xs" data-tooltip="tooltip" title="View case"><span class="glyphicon glyphicon-book"></span></a>
+                                            <a href="{% url "analyses.views.edit_case" case.id %}" type="button" class="btn btn-soft btn-xs" data-tooltip="tooltip" title="Edit case"><span class="glyphicon glyphicon-pencil"></span></a>
                                         </td>
                                     </tr>
                                     {% endfor %}
@@ -102,12 +102,12 @@
                                             </td>
                                             <td>{{ anal.completed_at }}</td>
                                             <td>
-                                                <a href="{% url "analyses.views.image" anal.image_id %}" type="button" class="btn btn-primary btn-xs fancybox" data-tooltip="tooltip" title="View photo"><i class="fa fa-photo"></i></a>
-                                                <a href="{% url "analyses.views.show_analysis" anal.id %}" type="button" class="btn btn-info btn-xs" data-tooltip="tooltip" title="View report"><i class="fa fa-file-text"></i></a>
+                                                <a href="{% url "analyses.views.image" anal.image_id %}" type="button" class="btn btn-primary btn-xs fancybox" data-tooltip="tooltip" title="View photo"><span class="glyphicon glyphicon-picture"></span></a>
+                                                <a href="{% url "analyses.views.show_analysis" anal.id %}" type="button" class="btn btn-info btn-xs" data-tooltip="tooltip" title="View report"><span class="glyphicon glyphicon-list-alt"></span></a>
                                                 {% if anal.image.favorites.all %}
-                                                    <a id="{% url "analyses.views.favorite" anal.id %}" rel="{{ anal.id }}" type="button" class="favorite btn btn-xs btn-warning star{{anal.id}}" data-tooltip="tooltip" title="Un-set as favorite"> <i class="fa fa-star"> </i></a>
+                                                    <a id="{% url "analyses.views.favorite" anal.id %}" rel="{{ anal.id }}" type="button" class="favorite btn btn-xs btn-warning star{{anal.id}}" data-tooltip="tooltip" title="Un-set as favorite"> <span class="glyphicon glyphicon-star"></span></a>
                                                 {% else %}
-                                                    <a id="{% url "analyses.views.favorite" anal.id %}" rel="{{ anal.id }}" type="button" class="favorite btn btn-xs btn-default star{{anal.id}}" data-tooltip="tooltip" title="Set as favorite"> <i class="fa fa-star"> </i></a>
+                                                    <a id="{% url "analyses.views.favorite" anal.id %}" rel="{{ anal.id }}" type="button" class="favorite btn btn-xs btn-default star{{anal.id}}" data-tooltip="tooltip" title="Set as favorite"> <span class="glyphicon glyphicon-star"></span></a>
                                                 {% endif %}
                                             </td>
                                         </tr>
